week6/kakao-5th-apidoc-start-main/src/main/java/com/example/kakao/_core/errors/exception/Exception403.java
package com.example.kakao._core.errors.exception;

import com.example.kakao._core.utils.ApiUtils;
import lombok.Getter;
import org.springframework.http.HttpStatus;


// 권한 없음
@Getter
public class Exception403 extends HttpStatusException {
    public Exception403(String message) {
        super(message, HttpStatus.FORBIDDEN);
    }

}